test/tests/stages/9_functions/valid/no_arguments/use_function_in_expression.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: bar
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 9
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CMultiply: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  CFunctionCall: 
                    TIdentifier: bar
                    List[0]: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CAdd: 
                  CFunctionCall: 
                    TIdentifier: foo
                    List[0]: 
                    None: 
                  CBinary: 
                    CDivide: 
                    CFunctionCall: 
                      TIdentifier: bar
                      List[0]: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
